# cpa-rust

./: Cargo.toml  README.md  corr.npy
data/: l0.npy  leakages.npy  plaintext.npy
examples/: cpa.rs  cpa_partition.rs  cpa_single.rs  dummy_files.rs  dummy_partition.rs  rank.rs  rank_partition.rs  read.rs  single.rs  test_cpa_normal.rs  test_cpa_single.rs
src/: cpa.rs  cpa_normal.rs  cpa_partition.rs  cpa_single.rs  leakage.rs  lib.rs  main.rs  read.rs  tools.rs
