[package]
name = "cpa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
ndarray = "0.15.1"
serde = "1.0.136"
serde_json = "1.0.79"
ndarray-npy = "0.8.1"
npyz = "0.8"
csv = "1.1"
plotters = "0.3"
fast-float = "0.2"
rayon = "1.7.0"
simple_bar = "0.2.2"
indicatif = "0.17.3"
num-traits = "0.2.18"
